--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-04-04 Sun 01:52 -->
+<!-- 2023-08-10 Thu 02:02 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Mayer Goldberg's Homepage (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</title>
@@ -162,19 +162,6 @@
   .footdef  { margin-bottom: 1em; }
   .figure { padding: 1em; }
   .figure p { text-align: center; }
-  .equation-container {
-    display: table;
-    text-align: center;
-    width: 100%;
-  }
-  .equation {
-    vertical-align: middle;
-  }
-  .equation-label {
-    display: table-cell;
-    text-align: right;
-    vertical-align: middle;
-  }
   .inlinetask {
     padding: 10px;
     border: 2px solid gray;
@@ -199,7 +186,7 @@
 @licstart  The following is the entire license notice for the
 JavaScript code in this tag.
 
-Copyright (C) 2012-2020 Free Software Foundation, Inc.
+Copyright (C) 2012-2019 Free Software Foundation, Inc.
 
 The JavaScript code in this tag is free software: you can
 redistribute it and/or modify it under the terms of the GNU
@@ -248,13 +235,12 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org56dfb29">1. Contact Information</a></li>
-<li><a href="#org8bb8a3c">2. Research</a></li>
-<li><a href="#org5483131">3. Teaching</a></li>
-<li><a href="#org0f42154">4. Departmental duties</a></li>
-<li><a href="#org73041e8">5. Personal Interests</a></li>
-<li><a href="#org2d2942c">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
-<li><a href="#orgbbc5afa">7. <i>This website is seriously out-of-date&#x2026;!</i></a></li>
+<li><a href="#orgabc1e64">1. Contact Information</a></li>
+<li><a href="#org14e533c">2. Research</a></li>
+<li><a href="#org5e5bb3f">3. Teaching</a></li>
+<li><a href="#orge68af49">4. Departmental duties</a></li>
+<li><a href="#org187d802">5. Personal Interests</a></li>
+<li><a href="#orgdf96c5c">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
 </ul>
 </div>
 </div>
@@ -271,36 +257,34 @@ regardless of whether or not it made money for anybody?
 </p>
 </blockquote>
 
-<div id="outline-container-org56dfb29" class="outline-2">
-<h2 id="org56dfb29"><span class="section-number-2">1</span> Contact Information</h2>
+<div id="outline-container-orgabc1e64" class="outline-2">
+<h2 id="orgabc1e64"><span class="section-number-2">1</span> Contact Information</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><b>Email:</b> <a href="mailto:gmayer@little-lisper.org">gmayer@little-lisper.org</a>. All email, from all other accounts,
 gets forwarded to this account.</li>
 <li><b>Office:</b> Building 37 (Alon, &#x202e;אלון&#x202c;) room 106, mailbox 44</li>
-<li><b>Office hours</b> (for the <b>Spring Semester, 2021</b>, currently <b>only</b> on <a href="https://zoom.us/"><i>Zoom</i></a>, due to covid-19&#x2026;)
+<li><b>Office hours</b> (for the <b>Summer Semester, 2023</b>, currently <b>only</b> on <a href="https://zoom.us/"><i>Zoom</i></a> only:
 <ul class="org-ul">
-<li>For my <i>functional programming course</i>: Mondays, 14-16</li>
-<li>For the <a href="./tc.html"><i>Teaching Committee</i> (&#x202e;ועדת הוראה, שנים ב–ד&#x202c;)</a>: Mondays, 19-21</li>
+<li>For the <a href="./tc.html"><i>Teaching Committee</i> (&#x202e;ועדת הוראה, שנים ב–ד&#x202c;)</a>: Mondays, 17-19</li>
 </ul></li>
 <li><b>Telephones:</b> Voice (+972)(0)8-647-7873, FAX (+972)(0)8-647-7650</li>
 <li><b>Professional mailing address:</b> <a href="mailto:gmayer@little-lisper.org">Mayer Goldberg</a>, <a href="http://www.cs.bgu.ac.il/">Department of Computer
 Science</a>, <a href="http://www.bgu.ac.il/">Ben Gurion University</a>, PO Box 653, Be'er Sheva 84105,
 Israel.</li>
-<li><b>Personal mailing address:</b> Mayer &amp; Sharon Goldberg, PO Box 15161, Be'er Sheva, 8412101, Israel</li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org8bb8a3c" class="outline-2">
-<h2 id="org8bb8a3c"><span class="section-number-2">2</span> Research</h2>
+<div id="outline-container-org14e533c" class="outline-2">
+<h2 id="org14e533c"><span class="section-number-2">2</span> Research</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org9ce1ae4" class="outline-3">
-<h3 id="org9ce1ae4"><span class="section-number-3">2.1</span> Research Interests</h3>
+<div id="outline-container-orga9b9635" class="outline-3">
+<h3 id="orga9b9635"><span class="section-number-3">2.1</span> Research Interests</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
-<li>The Lambda Calculus</li>
+<li>The Lambda Calculus &amp; Combinatory Logic</li>
 <li>Programming Languages
 <ul class="org-ul">
 <li>Interpretation &amp; Compilation</li>
@@ -314,42 +298,14 @@ Israel.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgcf3f366" class="outline-3">
-<h3 id="orgcf3f366"><span class="section-number-3">2.2</span> Research Students</h3>
-<div class="outline-text-3" id="text-2-2">
-</div>
-<ol class="org-ol">
-<li><a id="org964958b"></a>Present research students<br />
-<div class="outline-text-4" id="text-2-2-1">
-<ul class="org-ul">
-<li>Lior Zur-Lotan (MSc, 2021)</li>
-</ul>
-</div>
-</li>
-<li><a id="org4a67cf1"></a>Past research students<br />
-<div class="outline-text-4" id="text-2-2-2">
-<ul class="org-ul">
-<li>Valery Frolov (MSc, 2012)</li>
-<li>Guy Wiener (PhD, 2012)</li>
-<li>Sonia Margulis (MSc, 2011)</li>
-<li>Avi Shefi (MSc, 2009)</li>
-<li>Yelena Lev (MSc, 2008)</li>
-<li>Yigal Greenshpun (MSc, 2007)</li>
-<li>Guy Wiener (MSc, 2007)</li>
-<li>Assaf Shemesh (MSc, 2006)</li>
-</ul>
-</div>
-</li>
-</ol>
-</div>
 </div>
 
-<div id="outline-container-org5483131" class="outline-2">
-<h2 id="org5483131"><span class="section-number-2">3</span> Teaching</h2>
+<div id="outline-container-org5e5bb3f" class="outline-2">
+<h2 id="org5e5bb3f"><span class="section-number-2">3</span> Teaching</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
-<li><i>Introduction to Functional Programming</i>, Spring 2021</li>
-<li><i>Introduction to Compiler Construction</i>, Fall 2020</li>
+<li><i>Introduction to Compiler Construction</i>, Fall 2023</li>
+<li><i>Introduction to the Lambda Calculus &amp; Combinatory Logic</i>, Spring 2024</li>
 <li><a href="./tutorials.html">My tutorials</a></li>
 <li><a href="./special.html">My policies on extensions, exemptions &amp; special requests</a></li>
 <li><a href="./projects.html">Undergraduate projects I am offering (&#x202e;פרוייקטים לתואר ראשון&#x202c;)</a></li>
@@ -357,8 +313,8 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org0f42154" class="outline-2">
-<h2 id="org0f42154"><span class="section-number-2">4</span> Departmental duties</h2>
+<div id="outline-container-orge68af49" class="outline-2">
+<h2 id="orge68af49"><span class="section-number-2">4</span> Departmental duties</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="./tc.html"><i>Teaching Committee</i></a> for years 2&#x2013;4 (&#x202e;ועדת הוראה, שנים ב–ד&#x202c;)</li>
@@ -366,8 +322,8 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org73041e8" class="outline-2">
-<h2 id="org73041e8"><span class="section-number-2">5</span> Personal Interests</h2>
+<div id="outline-container-org187d802" class="outline-2">
+<h2 id="org187d802"><span class="section-number-2">5</span> Personal Interests</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="./proglang/proglang.html">Learning interesting programming languages</a></li>
@@ -381,8 +337,8 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org2d2942c" class="outline-2">
-<h2 id="org2d2942c"><span class="section-number-2">6</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
+<div id="outline-container-orgdf96c5c" class="outline-2">
+<h2 id="orgdf96c5c"><span class="section-number-2">6</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>While the look <i>is</i> drab, mainly because I know very little about graphical design</li>
@@ -396,23 +352,10 @@ So please give the website a second look&#x2026; &#9786;
 </p>
 </div>
 </div>
-
-<div id="outline-container-orgbbc5afa" class="outline-2">
-<h2 id="orgbbc5afa"><span class="section-number-2">7</span> <i>This website is seriously out-of-date&#x2026;!</i></h2>
-<div class="outline-text-2" id="text-7">
-<p>
-My apologies!
-</p>
-
-<p>
-As of around 2014 and until very recently, I was having difficulties updating and managing the website. A combination of technical difficulties, changing platforms, and lack of time to deal with these problems, all prevented me from keeping my website up-to-date. Anyway, I think I managed to solve many of the old problems, and get my website up and running again. I'm updating it continuously. So please stay tuned! &#9786;
-</p>
-</div>
-</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2021-04-04 Sun 01:52</p>
+<p class="date">Created: 2023-08-10 Thu 02:02</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
