--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-10 Thu 02:02 -->
+<!-- 2023-08-10 Thu 02:13 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Mayer Goldberg's Homepage (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</title>
@@ -235,12 +235,12 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgabc1e64">1. Contact Information</a></li>
-<li><a href="#org14e533c">2. Research</a></li>
-<li><a href="#org5e5bb3f">3. Teaching</a></li>
-<li><a href="#orge68af49">4. Departmental duties</a></li>
-<li><a href="#org187d802">5. Personal Interests</a></li>
-<li><a href="#orgdf96c5c">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
+<li><a href="#org106008a">1. Contact Information</a></li>
+<li><a href="#org8f1ef5a">2. Research</a></li>
+<li><a href="#org499a0b5">3. Teaching</a></li>
+<li><a href="#orgc57baf6">4. Departmental duties</a></li>
+<li><a href="#org19e7604">5. Personal Interests</a></li>
+<li><a href="#org59ee8fe">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
 </ul>
 </div>
 </div>
@@ -257,8 +257,8 @@ regardless of whether or not it made money for anybody?
 </p>
 </blockquote>
 
-<div id="outline-container-orgabc1e64" class="outline-2">
-<h2 id="orgabc1e64"><span class="section-number-2">1</span> Contact Information</h2>
+<div id="outline-container-org106008a" class="outline-2">
+<h2 id="org106008a"><span class="section-number-2">1</span> Contact Information</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><b>Email:</b> <a href="mailto:gmayer@little-lisper.org">gmayer@little-lisper.org</a>. All email, from all other accounts,
@@ -276,12 +276,12 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org14e533c" class="outline-2">
-<h2 id="org14e533c"><span class="section-number-2">2</span> Research</h2>
+<div id="outline-container-org8f1ef5a" class="outline-2">
+<h2 id="org8f1ef5a"><span class="section-number-2">2</span> Research</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-orga9b9635" class="outline-3">
-<h3 id="orga9b9635"><span class="section-number-3">2.1</span> Research Interests</h3>
+<div id="outline-container-orge6f8d32" class="outline-3">
+<h3 id="orge6f8d32"><span class="section-number-3">2.1</span> Research Interests</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>The Lambda Calculus &amp; Combinatory Logic</li>
@@ -300,8 +300,8 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org5e5bb3f" class="outline-2">
-<h2 id="org5e5bb3f"><span class="section-number-2">3</span> Teaching</h2>
+<div id="outline-container-org499a0b5" class="outline-2">
+<h2 id="org499a0b5"><span class="section-number-2">3</span> Teaching</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><i>Introduction to Compiler Construction</i>, Fall 2023</li>
@@ -313,8 +313,8 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-orge68af49" class="outline-2">
-<h2 id="orge68af49"><span class="section-number-2">4</span> Departmental duties</h2>
+<div id="outline-container-orgc57baf6" class="outline-2">
+<h2 id="orgc57baf6"><span class="section-number-2">4</span> Departmental duties</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="./tc.html"><i>Teaching Committee</i></a> for years 2&#x2013;4 (&#x202e;ועדת הוראה, שנים ב–ד&#x202c;)</li>
@@ -322,8 +322,8 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org187d802" class="outline-2">
-<h2 id="org187d802"><span class="section-number-2">5</span> Personal Interests</h2>
+<div id="outline-container-org19e7604" class="outline-2">
+<h2 id="org19e7604"><span class="section-number-2">5</span> Personal Interests</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="./proglang/proglang.html">Learning interesting programming languages</a></li>
@@ -337,13 +337,13 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-orgdf96c5c" class="outline-2">
-<h2 id="orgdf96c5c"><span class="section-number-2">6</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
+<div id="outline-container-org59ee8fe" class="outline-2">
+<h2 id="org59ee8fe"><span class="section-number-2">6</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>While the look <i>is</i> drab, mainly because I know very little about graphical design</li>
 <li>The website is generated from org-mode in GNU Emacs</li>
-<li>Org-mode is powerful, and I've added support in GNU Emacs for typing in languages, so the combination of left-to-right language and &#x202e;שָׂפוֹת שֶׁנִּכְתָּבוֹת מִיָּמִין לִשְׂמֹאל, או كِتَابَتْهَا مِن ٱلْيَمِين إلَى ٱلْيَسَار&#x202c; is accomplished simply and accurately</li>
+<li>Org-mode is powerful, and I've added support in GNU Emacs for typing in languages, so the combination of left-to-right language and &#x202e;שָׂפוֹת שֶׁנִּכְתָּבוֹת מִיָּמִין לִשְׂמֹאל, או كِتَابَتْهَا مِن الْيَمِين إلَى الْيَسَار&#x202c; is accomplished simply and accurately</li>
 <li>The website is currently (as of 2021) being updated rapidly, and more material is added weekly</li>
 </ul>
 
@@ -355,7 +355,7 @@ So please give the website a second look&#x2026; &#9786;
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2023-08-10 Thu 02:02</p>
+<p class="date">Created: 2023-08-10 Thu 02:13</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
