--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-11 Fri 17:15 -->
+<!-- 2023-08-11 Fri 17:17 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Mayer Goldberg's Homepage (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</title>
@@ -235,11 +235,11 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org51240ab">1. Contact Information</a></li>
-<li><a href="#org9caac4a">2. Research</a></li>
-<li><a href="#orgff23daf">3. Teaching</a></li>
-<li><a href="#orgceaab43">4. Departmental duties</a></li>
-<li><a href="#org27ef08c">5. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
+<li><a href="#org02ede35">1. Contact Information</a></li>
+<li><a href="#org682dee4">2. Research</a></li>
+<li><a href="#org631394d">3. Teaching</a></li>
+<li><a href="#orga734018">4. Departmental duties</a></li>
+<li><a href="#org05fcb33">5. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
 </ul>
 </div>
 </div>
@@ -256,8 +256,8 @@ regardless of whether or not it made money for anybody?
 </p>
 </blockquote>
 
-<div id="outline-container-org51240ab" class="outline-2">
-<h2 id="org51240ab"><span class="section-number-2">1</span> Contact Information</h2>
+<div id="outline-container-org02ede35" class="outline-2">
+<h2 id="org02ede35"><span class="section-number-2">1</span> Contact Information</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><b>Email:</b> <a href="mailto:gmayer@little-lisper.org">gmayer@little-lisper.org</a>. All email, from all other accounts,
@@ -275,12 +275,12 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org9caac4a" class="outline-2">
-<h2 id="org9caac4a"><span class="section-number-2">2</span> Research</h2>
+<div id="outline-container-org682dee4" class="outline-2">
+<h2 id="org682dee4"><span class="section-number-2">2</span> Research</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-orgcbc0086" class="outline-3">
-<h3 id="orgcbc0086"><span class="section-number-3">2.1</span> Research Interests</h3>
+<div id="outline-container-org03c5b35" class="outline-3">
+<h3 id="org03c5b35"><span class="section-number-3">2.1</span> Research Interests</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>The Lambda Calculus &amp; Combinatory Logic</li>
@@ -299,8 +299,8 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-orgff23daf" class="outline-2">
-<h2 id="orgff23daf"><span class="section-number-2">3</span> Teaching</h2>
+<div id="outline-container-org631394d" class="outline-2">
+<h2 id="org631394d"><span class="section-number-2">3</span> Teaching</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><i>Introduction to Compiler Construction</i>, Fall 2023</li>
@@ -309,17 +309,17 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-orgceaab43" class="outline-2">
-<h2 id="orgceaab43"><span class="section-number-2">4</span> Departmental duties</h2>
+<div id="outline-container-orga734018" class="outline-2">
+<h2 id="orga734018"><span class="section-number-2">4</span> Departmental duties</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
-<li><a href="./tc.html"><i>Teaching Committee</i></a> for years 2&#x2013;4 (&#x202e;ועדת הוראה, שנים ב–ד&#x202c;)</li>
+<li><a href="./tc.html"><i>The Unergraduate Teaching Committee</i></a> for years 2&#x2013;4 (&#x202e;ועדת הוראה, שנים ב–ד&#x202c;)</li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org27ef08c" class="outline-2">
-<h2 id="org27ef08c"><span class="section-number-2">5</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
+<div id="outline-container-org05fcb33" class="outline-2">
+<h2 id="org05fcb33"><span class="section-number-2">5</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li>While the look <i>is</i> drab, mainly because I know very little about graphical design</li>
@@ -336,7 +336,7 @@ So please give the website a second look&#x2026; &#9786;
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2023-08-11 Fri 17:15</p>
+<p class="date">Created: 2023-08-11 Fri 17:17</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
