--- a/tc.html
+++ b/tc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-10 Thu 02:15 -->
+<!-- 2023-08-11 Fri 17:17 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Teaching Committee</title>
@@ -232,8 +232,8 @@ for the JavaScript code in this tag.
 <div id="content">
 <h1 class="title">Teaching Committee</h1>
 
-<div id="outline-container-org3a0ed39" class="outline-2">
-<h2 id="org3a0ed39"><span class="section-number-2">1</span> Synopsis</h2>
+<div id="outline-container-org562a8c4" class="outline-2">
+<h2 id="org562a8c4"><span class="section-number-2">1</span> Synopsis</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 I serve as the undergraduate advisor and head of teaching committee for years 2&#x2013;4 (&#x202e;יועץ לתואר ראשון, ויו"ר ועדת הוראה לשנים ב–ד&#x202c;) at the <a href="//www.cs.bgu.ac.il/"><i>Department of Computer Science</i></a> at <a href="http://www.bgu.ac.il/"><i>Ben-Gurion University</i></a>. 
@@ -241,8 +241,8 @@ I serve as the undergraduate advisor and head of teaching committee for years 2&
 </div>
 </div>
 
-<div id="outline-container-orga6fa460" class="outline-2">
-<h2 id="orga6fa460"><span class="section-number-2">2</span> How to contact me</h2>
+<div id="outline-container-orgbf525f8" class="outline-2">
+<h2 id="orgbf525f8"><span class="section-number-2">2</span> How to contact me</h2>
 <div class="outline-text-2" id="text-2">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -282,8 +282,8 @@ I serve as the undergraduate advisor and head of teaching committee for years 2&
 </div>
 </div>
 
-<div id="outline-container-orgbfd869b" class="outline-2">
-<h2 id="orgbfd869b"><span class="section-number-2">3</span> General guidelines</h2>
+<div id="outline-container-org4d684fa" class="outline-2">
+<h2 id="org4d684fa"><span class="section-number-2">3</span> General guidelines</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Please understand that:
@@ -296,8 +296,8 @@ Please understand that:
 </div>
 </div>
 
-<div id="outline-container-org56b4b60" class="outline-2">
-<h2 id="org56b4b60"><span class="section-number-2">4</span> Issues that come up frequently</h2>
+<div id="outline-container-orgdfa02d4" class="outline-2">
+<h2 id="orgdfa02d4"><span class="section-number-2">4</span> Issues that come up frequently</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>If you <b>seek authorization for a course</b>, or <b>&#x202e;מועד מיוחד&#x202c; in a course you took</b>, please go to the <a href="https://cs-sr.cs.bgu.ac.il/">Student Request Form (&#x202e;מערכת פניות הסטודנטים&#x202c;)</a>, and fill and submit the appropriate form. You should support &amp; substantiate any claims you make with appropriate documentation, and include those with your form. There is no need to speak with me in advance.</li>
@@ -334,7 +334,7 @@ For all other matters, please fill in the <a href="https://cs-sr.cs.bgu.ac.il/">
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg</p>
-<p class="date">Created: 2023-08-10 Thu 02:15</p>
+<p class="date">Created: 2023-08-11 Fri 17:17</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
