--- a/arabic/arabic.html
+++ b/arabic/arabic.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-21 Thu 23:41 -->
+<!-- 2023-09-21 Thu 23:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>My Journey with Arabic</title>
@@ -235,28 +235,28 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org31206ca">1. Colloquial Levantine Arabic ({{{rtl{ערבית מדוברת של המזרח הקרוב}}}}, {{{rtl{عامية شامي}}}})</a></li>
-<li><a href="#org57bb1a3">2. Modern Standard Arabic (<i>in planning</i>)</a></li>
+<li><a href="#orged67a74">1. Colloquial Levantine Arabic (&#x202e;ערבית מדוברת של המזרח הקרוב (סוריה הגדולה)&#x202c;, &#x202e;عامية شامي&#x202c;)</a></li>
+<li><a href="#org0fd2776">2. Modern Standard Arabic (<i>in planning</i>)</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org31206ca" class="outline-2">
-<h2 id="org31206ca"><span class="section-number-2">1</span> Colloquial Levantine Arabic ({{{rtl{ערבית מדוברת של המזרח הקרוב}}}}, {{{rtl{عامية شامي}}}})</h2>
+<div id="outline-container-orged67a74" class="outline-2">
+<h2 id="orged67a74"><span class="section-number-2">1</span> Colloquial Levantine Arabic (&#x202e;ערבית מדוברת של המזרח הקרוב (סוריה הגדולה)&#x202c;, &#x202e;عامية شامي&#x202c;)</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-Colloquial Levantine Arabic is a collection of dialects in use in what used to be called <i>the Greater Syria</i>, or Sham {{{rtl{شام}}}}. This area includes Lebanon, Syria, Jordan, Israel, the West Bank, Gaza Strip. Historically, it also includes Iraq, although Colloquial Iraqi is a very different dialect
+Colloquial Levantine Arabic is a collection of closely-related dialects in use in what used to be called <i>the Greater Syria</i>, or Sham &#x202e;شام&#x202c;. This area includes Lebanon, Syria, Jordan, Israel, the West Bank, Gaza Strip. Historically, it also includes Iraq, although Colloquial Iraqi is a very different dialect, strongly influenced by Persian and Turkish. While I'm picking up some phonetics, and vocabulary from other dialects, the Levantine dialect is currently my main focus when learning Colloquial Arabic.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org57bb1a3" class="outline-2">
-<h2 id="org57bb1a3"><span class="section-number-2">2</span> Modern Standard Arabic (<i>in planning</i>)</h2>
+<div id="outline-container-org0fd2776" class="outline-2">
+<h2 id="org0fd2776"><span class="section-number-2">2</span> Modern Standard Arabic (<i>in planning</i>)</h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2023-09-21 Thu 23:41</p>
+<p class="date">Created: 2023-09-21 Thu 23:49</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
