--- a/languages.html
+++ b/languages.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-22 Fri 00:20 -->
+<!-- 2023-09-22 Fri 00:29 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Learning Languages</title>
@@ -235,20 +235,20 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbf9c53c">1. How I learn languages</a></li>
-<li><a href="#orga2aec82">2. Languages I'm currently learning</a></li>
-<li><a href="#orga171809">3. Languages I plan on learning</a></li>
-<li><a href="#orgaf34a24">4. Languages I've learnt in the past</a></li>
+<li><a href="#orgbfbb1d4">1. How I learn languages</a></li>
+<li><a href="#org4b0ecc4">2. Languages I'm currently learning</a></li>
+<li><a href="#org121bce4">3. Languages I plan on learning</a></li>
+<li><a href="#orge66c6f9">4. Languages I've learnt in the past</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgbf9c53c" class="outline-2">
-<h2 id="orgbf9c53c"><span class="section-number-2">1</span> How I learn languages</h2>
+<div id="outline-container-orgbfbb1d4" class="outline-2">
+<h2 id="orgbfbb1d4"><span class="section-number-2">1</span> How I learn languages</h2>
 </div>
 
-<div id="outline-container-orga2aec82" class="outline-2">
-<h2 id="orga2aec82"><span class="section-number-2">2</span> Languages I'm currently learning</h2>
+<div id="outline-container-org4b0ecc4" class="outline-2">
+<h2 id="org4b0ecc4"><span class="section-number-2">2</span> Languages I'm currently learning</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="./arabic/arabic.html">Arabic</a></li>
@@ -256,8 +256,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orga171809" class="outline-2">
-<h2 id="orga171809"><span class="section-number-2">3</span> Languages I plan on learning</h2>
+<div id="outline-container-org121bce4" class="outline-2">
+<h2 id="org121bce4"><span class="section-number-2">3</span> Languages I plan on learning</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>Turkish</li>
@@ -269,13 +269,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orgaf34a24" class="outline-2">
-<h2 id="orgaf34a24"><span class="section-number-2">4</span> Languages I've learnt in the past</h2>
+<div id="outline-container-orge66c6f9" class="outline-2">
+<h2 id="orge66c6f9"><span class="section-number-2">4</span> Languages I've learnt in the past</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
-<li>Russian</li>
-<li>Mandarin Chinese</li>
-<li>Latin</li>
+<li>Russian: I've taken two years of Russian as an undergraduate. By the end of my second year, I could speak, read, and write reasonably well for a beginner. The problem is that this was in the US, back in 1987, and it was not easy to find people with whom to converse in Russian&#x2026; I forgot much of my Russian, though I can still manage simple conversations. I do plan on returning to Russian some day.</li>
+<li>Mandarin Chinese: One summer I studied some Mandarin Chinese in the hope of sitting in on the course at Ben-Gurion university. I practiced the better part of a summer break, and by the end of the break, I was able to engage in simple, short conversations with Chinese speakers [I found on the internet]. But when the Fall semester was about to start, the students declared a strike, and classes were postponed for several weeks. By the time the strike was over I'd had enough on my plate and coulnd't find the time to study.</li>
+<li>Latin: I took one semester of Latin, and have kept on studying on my own. I don't study it presently, but I do read a bit Latin every now and then.</li>
 <li>Greek</li>
 <li>German</li>
 <li>Hindi</li>
@@ -287,7 +287,7 @@ for the JavaScript code in this tag.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2023-09-22 Fri 00:20</p>
+<p class="date">Created: 2023-09-22 Fri 00:29</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
