--- a/hebrew-support/hebrew-template.html
+++ b/hebrew-support/hebrew-template.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-23 Sat 01:18 -->
+<!-- 2023-09-23 Sat 01:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&#x202e;דוגמא לעברית&#x202c;</title>
@@ -236,19 +236,14 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb1fff37">1. דוגמא</a></li>
+<li><a href="#orge5227bd">1. דוגמא</a></li>
 </ul>
 </div>
 </div>
-<div class="html">
-<p>
-&lt;script src="gmayer-org-mode-web.js"&gt;&lt;/script&gt;
-</p>
+<script src="http://www.little-lisper.org/website/hebrew-support/gmayer-org-mode-web.js"></script>
 
-</div>
-
-<div id="outline-container-orgb1fff37" class="outline-2">
-<h2 id="orgb1fff37"><span class="section-number-2">1</span> דוגמא</h2>
+<div id="outline-container-orge5227bd" class="outline-2">
+<h2 id="orge5227bd"><span class="section-number-2">1</span> דוגמא</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 וזו דוגמא לטכסט בעברית
@@ -258,7 +253,7 @@ for the JavaScript code in this tag.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: ‪&#x202b;מֵאִיר גּוֹלְדְבֶּרְג&#x202c;</p>
-<p class="date">Created: 2023-09-23 Sat 01:18</p>
+<p class="date">Created: 2023-09-23 Sat 01:19</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
