--- a/hebrew-support/hebrew-template.html
+++ b/hebrew-support/hebrew-template.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-23 Sat 02:16 -->
+<!-- 2023-09-23 Sat 02:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&#x202e;דוגמא לעברית&#x202c;</title>
@@ -182,7 +182,7 @@
   /*]]>*/-->
 </style>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dana+Yad">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Secular+One">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=David+Libre">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic">
 <link rel="stylesheet" type="text/css" href="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.css" />
@@ -240,14 +240,14 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org9313e72">1. דוגמא</a></li>
+<li><a href="#orgbc76777">1. דוגמא</a></li>
 </ul>
 </div>
 </div>
 <script src="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-org9313e72" class="outline-2">
-<h2 id="org9313e72"><span class="section-number-2">1</span> דוגמא</h2>
+<div id="outline-container-orgbc76777" class="outline-2">
+<h2 id="orgbc76777"><span class="section-number-2">1</span> דוגמא</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 וזו דוגמא לטכסט בעברית. האם ניתן להכניס <span class="arabic">شوي عربيّة؟</span> ומה קורה כאן: <span style="font-family: 'Dana Yad'; font-size: 60">שלום!</span>
@@ -261,7 +261,7 @@ for the JavaScript code in this tag.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: ‪&#x202e;מֵאִיר גּוֹלְדְבֶּרְג&#x202c;</p>
-<p class="date">Created: 2023-09-23 Sat 02:16</p>
+<p class="date">Created: 2023-09-23 Sat 02:27</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
