--- a/hebrew-support/hebrew-template.html
+++ b/hebrew-support/hebrew-template.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-23 Sat 02:59 -->
+<!-- 2023-09-23 Sat 03:01 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&#x202e;דוגמא לעברית&#x202c;</title>
@@ -241,14 +241,14 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd5f0e8d">1. דוגמא</a></li>
+<li><a href="#org97e3f02">1. דוגמא</a></li>
 </ul>
 </div>
 </div>
 <script src="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-orgd5f0e8d" class="outline-2">
-<h2 id="orgd5f0e8d"><span class="section-number-2">1</span> דוגמא</h2>
+<div id="outline-container-org97e3f02" class="outline-2">
+<h2 id="org97e3f02"><span class="section-number-2">1</span> דוגמא</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 וזו דוגמא לטכסט בעברית. האם ניתן להכניס <span class="naskh">شوي عربيّة؟</span> וגם <span class="ruqaa">شوي عربيّة؟</span> 
@@ -262,7 +262,7 @@ for the JavaScript code in this tag.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: ‪&#x202e;מֵאִיר גּוֹלְדְבֶּרְג&#x202c;</p>
-<p class="date">Created: 2023-09-23 Sat 02:59</p>
+<p class="date">Created: 2023-09-23 Sat 03:01</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
