--- a/arabic/arabic.html
+++ b/arabic/arabic.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-23 Sat 14:46 -->
+<!-- 2023-09-23 Sat 14:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span class='hebrew'>לימוד ערבית</span></title>
@@ -241,23 +241,23 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org994fccb">1. משאבים</a></li>
-<li><a href="#org8d72ca5">2. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
-<li><a href="#orgcb0302c">3. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
+<li><a href="#orgf2496e1">1. משאבים</a></li>
+<li><a href="#org1ba7ee6">2. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
+<li><a href="#org26069d6">3. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
 </ul>
 </div>
 </div>
 <script src="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-org994fccb" class="outline-2">
-<h2 id="org994fccb"><span class="section-number-2">1</span> משאבים</h2>
+<div id="outline-container-orgf2496e1" class="outline-2">
+<h2 id="orgf2496e1"><span class="section-number-2">1</span> משאבים</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgd6d5ada" class="outline-3">
-<h3 id="orgd6d5ada"><span class="section-number-3">1.1</span> ספרים</h3>
+<div id="outline-container-org1b513fd" class="outline-3">
+<h3 id="org1b513fd"><span class="section-number-3">1.1</span> ספרים</h3>
 </div>
-<div id="outline-container-org5c73a05" class="outline-3">
-<h3 id="org5c73a05"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
+<div id="outline-container-org4b27a03" class="outline-3">
+<h3 id="org4b27a03"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="https://milon.madrasafree.com/">המלון המקוון של <b>מדרסה</b> לערבית מדוברת</a>. המלון פותח, מומש, ותוחזק על ידי <a href="https://rothfarb.info/"><b>רונן רוטפרב</b></a>. ברבות השנים, רונן העביר את הפרוייקט <a href="https://madrasafree.com/">לבית הספר <b>מדרסה</b> לערבית</a>, ואלו מתחזקים אותו כעת.</li>
@@ -265,31 +265,31 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orgda48d0e" class="outline-3">
-<h3 id="orgda48d0e"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
+<div id="outline-container-orgae118e4" class="outline-3">
+<h3 id="orgae118e4"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
 </div>
 </div>
-<div id="outline-container-org8d72ca5" class="outline-2">
-<h2 id="org8d72ca5"><span class="section-number-2">2</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
+<div id="outline-container-org1ba7ee6" class="outline-2">
+<h2 id="org1ba7ee6"><span class="section-number-2">2</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם <b>סוריה הגדולה</b>, או שָׁאם (<span class='naskh'>شام</span>). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, <b>סוריה הגדולה</b> כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של <b>סוריה הגדולה</b>, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של <b>סוריה הגדולה</b>, אלא להתייחס אליו כלהג נפרד.
 </p>
 </div>
 
-<div id="outline-container-org6a5fc80" class="outline-3">
-<h3 id="org6a5fc80"><span class="section-number-3">2.1</span> Timeline</h3>
+<div id="outline-container-orgb1e08ce" class="outline-3">
+<h3 id="orgb1e08ce"><span class="section-number-3">2.1</span> Timeline</h3>
 <div class="outline-text-3" id="text-2-1">
 </div>
 <ol class="org-ol">
-<li><a id="org778c460"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
+<li><a id="org844f2af"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
 <div class="outline-text-4" id="text-2-1-1">
 <p>
 הכרטסת שלי כוללת 4261 כרטיסים. הוספתי 230+ כרטיסים מאז תחילת החודש. זה קצת מאכזב. קיוויתי שאוכל להוסיף מעל לאלף כרטיסים חדשים, ולא קרה. אני צריך להגביר את הקצב לפני תחילת הסמסטר.
 </p>
 
 <p>
-יצרתי מקלדת וירטואלית לערבית עבור העורך שלי, אימקס. אני מאד אוהב את המקלדת הזאת משום שהיא מבוססת על מקלדת ה־<span class='latin'>Sholes, QWERTY</span> הסטנדרטית לאנגלית, שאני כבר מכיר היטב. היא תומכת היטב בניקוד, והרחבות של האלף־בית הערבי (<span class='naskh'>پ، ڤ، گ</span>), ומנגישה סימנים מיוניקוד ערבי שבדרך כלל אינם נתמכים על ידי המקלדת הסטנדרטית, ולמרות כל זה, קל לכתוב בה מהר ומדוייק. הבעיה היא שהמקלדת הזאת לא נתמכת לא על ידי הטלפון שלי ולא על ידי הלפטופ עצמו, אלא קיימת אך ורק מתוך אימקס, כך שכשאני עובד על הלפטופ, התרגלתי לעשות <i><span class='latin'>copy-and-paste</span></i> <span style='font-face: Amiri; '>&#xfd3f;١٢٣٤&#xfd3e;</span>
+יצרתי מקלדת וירטואלית לערבית עבור העורך שלי, אימקס. אני מאד אוהב את המקלדת הזאת משום שהיא מבוססת על מקלדת ה־<span class='latin'>Sholes, QWERTY</span> הסטנדרטית לאנגלית, שאני כבר מכיר היטב. היא תומכת היטב בניקוד, והרחבות של האלף־בית הערבי (<span class='naskh'>پ، ڤ، گ</span>), ומנגישה סימנים מיוניקוד ערבי שבדרך כלל אינם נתמכים על ידי המקלדת הסטנדרטית, ולמרות כל זה, קל לכתוב בה מהר ומדוייק. הבעיה היא שהמקלדת הזאת לא נתמכת לא על ידי הטלפון שלי ולא על ידי הלפטופ עצמו, אלא קיימת אך ורק מתוך אימקס, כך שכשאני עובד על הלפטופ, התרגלתי לעשות <i><span class='latin'>copy-and-paste</span></i> <span class='naskh'><span style='font-face: Amiri; '>&#xfd3f;</span>١٢٣٤<span style='font-face: Amiri; '>&#xfd3e;</span></span>
 </p>
 
 <p>
@@ -309,13 +309,13 @@ I've come to realize that I'm mispronouncing words, confusing the <span class='n
 </div>
 </div>
 
-<div id="outline-container-orgcb0302c" class="outline-2">
-<h2 id="orgcb0302c"><span class="section-number-2">3</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
+<div id="outline-container-org26069d6" class="outline-2">
+<h2 id="org26069d6"><span class="section-number-2">3</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (<span class='hebrew'>מֵאִיר גּוֹלְדְּבֵּרְג</span>)</p>
-<p class="date">Created: 2023-09-23 Sat 14:46</p>
+<p class="date">Created: 2023-09-23 Sat 14:55</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
