--- a/arabic/arabic.html
+++ b/arabic/arabic.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-23 Sat 23:12 -->
+<!-- 2023-09-23 Sat 23:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span class='hebrew'>לימוד ערבית</span></title>
@@ -241,21 +241,21 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org9dd2231">1. משאבים</a></li>
-<li><a href="#orgbc9ffe5">2. הכתב הערבי</a></li>
-<li><a href="#org4173300">3. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
-<li><a href="#org3fc1b96">4. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
+<li><a href="#orgbfa7dae">1. משאבים</a></li>
+<li><a href="#orgf1cd8b1">2. הכתב הערבי</a></li>
+<li><a href="#org9c49b60">3. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
+<li><a href="#org54298b4">4. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
 </ul>
 </div>
 </div>
 <script src="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-org9dd2231" class="outline-2">
-<h2 id="org9dd2231"><span class="section-number-2">1</span> משאבים</h2>
+<div id="outline-container-orgbfa7dae" class="outline-2">
+<h2 id="orgbfa7dae"><span class="section-number-2">1</span> משאבים</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgd93d04e" class="outline-3">
-<h3 id="orgd93d04e"><span class="section-number-3">1.1</span> ספרים</h3>
+<div id="outline-container-org4f0b15e" class="outline-3">
+<h3 id="org4f0b15e"><span class="section-number-3">1.1</span> ספרים</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>הספרים של יוחנן אליחי
@@ -277,13 +277,13 @@ for the JavaScript code in this tag.
 <li>החוברות <a href="https://minerva-books.com/product/%D7%9C%D7%93%D7%91%D7%A8-%D7%A2%D7%A8%D7%91%D7%99%D7%AA-%D7%A7%D7%95%D7%A8%D7%A1-%D7%9C%D7%9C%D7%99%D7%9E%D7%95%D7%93-%D7%A2%D7%A6%D7%9E%D7%99/">לדבר ערבית</a>: החוברות קריאות מאד. אבל אני מעדיף ספרי לימוד קצת יותר פורמאליים, כלומר לא רק עם דיאלוגים ורשימות מלים, אלא עם קצת יותר הסברים דקדוקיים.</li>
 </ul></li>
 </ul></li>
-<li>המלון האטימולוגי לערבית מדוברת ולעברית מאת <b>אברהם שטאל</b> (כריכה קשה, שני כרכים): זה המלון השימושי ביותר שיש לי לערבית מדוברת. מפורט מאד, כולל המוני מלים ודוגמאות. כבר לא בדפוס, אבל אפשר עדיין למצוא אותו בחנויות לספרים משומשים. אין בו את כל העושר שיש במילונים של אליחי, ובכל זאת, יש לו אוצר מלים עדכני וגדול מאד.</li>
+<li>המלון האטימולוגי לערבית מדוברת ולעברית מאת <b>אברהם שטאל</b> (כריכה קשה, שני כרכים): זה המלון השימושי ביותר שיש לי לערבית מדוברת. מפורט מאד, כולל המוני מלים ודוגמאות. כבר לא בדפוס, אבל אפשר עדיין למצוא אותו בחנויות לספרים משומשים. אין בו את כל העושר שיש במילונים של אליחי, שנותן הרבה מלים נרדפות, ובכל זאת, יש לו הוא מכסה תחומים שאליחי לא נכנס אליהם, ואוצר המלים עדכני יותר וגדול מאד.</li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org96d465d" class="outline-3">
-<h3 id="org96d465d"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
+<div id="outline-container-org2a9e408" class="outline-3">
+<h3 id="org2a9e408"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="https://milon.madrasafree.com/">המלון המקוון של <b>מדרסה</b> לערבית מדוברת</a>. המלון פותח, מומש, ותוחזק על ידי <a href="https://rothfarb.info/"><b>רונן רוטפרב</b></a>. לאחר שנים שבהן ניהל את הפרוייקט לבדו, רונן העביר את הפרוייקט <a href="https://madrasafree.com/">לבית הספר <b>מדרסה</b> לערבית</a>, ואלו מתחזקים אותו כעת.</li>
@@ -292,38 +292,38 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org0fe0588" class="outline-3">
-<h3 id="org0fe0588"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
+<div id="outline-container-org94d1b36" class="outline-3">
+<h3 id="org94d1b36"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
 </div>
 </div>
-<div id="outline-container-orgbc9ffe5" class="outline-2">
-<h2 id="orgbc9ffe5"><span class="section-number-2">2</span> הכתב הערבי</h2>
+<div id="outline-container-orgf1cd8b1" class="outline-2">
+<h2 id="orgf1cd8b1"><span class="section-number-2">2</span> הכתב הערבי</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org73e872d" class="outline-3">
-<h3 id="org73e872d"><span class="section-number-3">2.1</span> הסדר המלוני</h3>
+<div id="outline-container-org1fb939b" class="outline-3">
+<h3 id="org1fb939b"><span class="section-number-3">2.1</span> הסדר המלוני</h3>
 </div>
-<div id="outline-container-org3584be8" class="outline-3">
-<h3 id="org3584be8"><span class="section-number-3">2.2</span> הקלדה עיוורת</h3>
+<div id="outline-container-org9a0b5e5" class="outline-3">
+<h3 id="org9a0b5e5"><span class="section-number-3">2.2</span> הקלדה עיוורת</h3>
 </div>
-<div id="outline-container-orgb8106c3" class="outline-3">
-<h3 id="orgb8106c3"><span class="section-number-3">2.3</span> כתיבה תמה</h3>
+<div id="outline-container-orgd323b66" class="outline-3">
+<h3 id="orgd323b66"><span class="section-number-3">2.3</span> כתיבה תמה</h3>
 </div>
 </div>
-<div id="outline-container-org4173300" class="outline-2">
-<h2 id="org4173300"><span class="section-number-2">3</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
+<div id="outline-container-org9c49b60" class="outline-2">
+<h2 id="org9c49b60"><span class="section-number-2">3</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם <b>סוריה הגדולה</b>, או שָׁאם (<span class='naskh'>شام</span>). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, <b>סוריה הגדולה</b> כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של <b>סוריה הגדולה</b>, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של <b>סוריה הגדולה</b>, אלא להתייחס אליו כלהג נפרד.
 </p>
 </div>
 
-<div id="outline-container-org7807f22" class="outline-3">
-<h3 id="org7807f22"><span class="section-number-3">3.1</span> Timeline</h3>
+<div id="outline-container-orgb476031" class="outline-3">
+<h3 id="orgb476031"><span class="section-number-3">3.1</span> Timeline</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
 <ol class="org-ol">
-<li><a id="orgf5da94a"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
+<li><a id="org1581420"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
 <div class="outline-text-4" id="text-3-1-1">
 <p>
 הכרטסת שלי כוללת 4261 כרטיסים. הוספתי 230+ כרטיסים מאז תחילת החודש. זה קצת מאכזב. קיוויתי שאוכל להוסיף מעל לאלף כרטיסים חדשים, ולא קרה. אני צריך להגביר את הקצב לפני תחילת הסמסטר.
@@ -342,13 +342,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org3fc1b96" class="outline-2">
-<h2 id="org3fc1b96"><span class="section-number-2">4</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
+<div id="outline-container-org54298b4" class="outline-2">
+<h2 id="org54298b4"><span class="section-number-2">4</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (<span class='hebrew'>מֵאִיר גּוֹלְדְּבֵּרְג</span>)</p>
-<p class="date">Created: 2023-09-23 Sat 23:12</p>
+<p class="date">Created: 2023-09-23 Sat 23:16</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
